--- a/app/src/main/res/layout/fragment_newgame2.xml
+++ b/app/src/main/res/layout/fragment_newgame2.xml
@@ -129,12 +129,30 @@
 
                     </TableLayout>
 
-                    <TextView
-                        android:id="@+id/resultLabel"
-                        style="@style/label"
-                        android:padding="2dp"
-                        android:text="0"
-                       />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/resultLabel"
+                            style="@style/label"
+                            android:layout_width="wrap_content"
+                            android:padding="2dp"
+                            android:text="0"
+                           />
+
+                        <ImageView
+                            android:id="@+id/resultPredictImg"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="8dp"
+                            />
+                    </LinearLayout>
 
                     <TableLayout
                         android:id="@+id/resultTable"
